Customize website with Khalil's information and setup Formspree integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Licensed RCIC providing expert Canadian immigration services. Permanent residence, work permits, study permits & family sponsorship. Free consultation.">
     <meta name="keywords" content="Canadian immigration consultant, RCIC, immigration Canada, permanent residence Canada, work permit, study permit, Express Entry">
-    <title>Immigration Consultant Canada | Licensed RCIC Services</title>
+    <title>Unlock Immigration | Khalil Humam - Canadian Immigration Consultant</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +16,8 @@
     <header class="header" id="header">
         <nav class="nav container">
             <div class="nav-logo">
-                <span class="logo-text">Your Name</span>
-                <span class="logo-subtitle">Immigration Consulting</span>
+                <span class="logo-text">Unlock Immigration</span>
+                <span class="logo-subtitle">Khalil Humam</span>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-tag">Who We Are</span>
-                <h2 class="section-title">About Your Name</h2>
+                <h2 class="section-title">About Khalil Humam</h2>
             </div>
             <div class="about-grid">
                 <div class="about-image">
@@ -358,7 +358,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <a href="mailto:your.email@example.com">your.email@example.com</a>
+                            <a href="mailto:khalil.humam@unlockimmigration.ca">khalil.humam@unlockimmigration.ca</a>
                         </div>
                     </div>
 
@@ -370,7 +370,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Phone</h4>
-                            <a href="tel:+1234567890">+1 (234) 567-890</a>
+                            <a href="tel:+12367779820">+1.236.777.9820</a>
                         </div>
                     </div>
 
@@ -383,7 +383,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Office</h4>
-                            <p>Your Address<br>City, Province<br>Postal Code, Canada</p>
+                            <p>Brentwood Mall<br>Burnaby, BC<br>Canada</p>
                         </div>
                     </div>
 
@@ -454,8 +454,8 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <span class="logo-text">Your Name</span>
-                        <span class="logo-subtitle">Immigration Consulting</span>
+                        <span class="logo-text">Unlock Immigration</span>
+                        <span class="logo-subtitle">Khalil Humam</span>
                     </div>
                     <p class="footer-text">RCIC License #: [Your License #]</p>
                 </div>
@@ -482,9 +482,9 @@
                 <div class="footer-col">
                     <h4 class="footer-title">Contact</h4>
                     <ul class="footer-contact">
-                        <li>your.email@example.com</li>
-                        <li>+1 (234) 567-890</li>
-                        <li>Your City, Province</li>
+                        <li>khalil.humam@unlockimmigration.ca</li>
+                        <li>+1.236.777.9820</li>
+                        <li>Burnaby, BC, Canada</li>
                     </ul>
                 </div>
             </div>
@@ -494,7 +494,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Your Name Immigration Consulting. All rights reserved.</p>
+                <p>&copy; 2024 Unlock Immigration. All rights reserved.</p>
             </div>
         </div>
     </footer>
