Move image to About section, remove RCIC license, update experience and languages

--- a/index.html
+++ b/index.html
@@ -66,27 +66,14 @@
             </div>
             <div class="about-grid">
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="12" cy="7" r="4"></circle>
-                        </svg>
-                        <p>Your Professional Photo</p>
-                    </div>
+                    <img src="https://drive.google.com/uc?export=view&id=1-9MjBXRn1m1Gcnvrj5gH_GJSjCd6XC2f" alt="Khalil Humam" style="width: 100%; border-radius: 20px; object-fit: cover; aspect-ratio: 3/4;">
                 </div>
                 <div class="about-content">
                     <p class="about-text">As a <strong>Regulated Canadian Immigration Consultant (RCIC)</strong> in good standing with the College of Immigration and Citizenship Consultants, I provide professional immigration services to individuals and families seeking to make Canada their home.</p>
                     
-                    <p class="about-text">With [X] years of experience navigating Canada's complex immigration system, I am committed to providing personalized, ethical, and results-driven immigration solutions. My practice is built on integrity, transparency, and a deep understanding of Canadian immigration law and policy.</p>
+                    <p class="about-text">With working in the immigration industry since 2017, I am committed to providing personalized, ethical, and results-driven immigration solutions. My practice is built on integrity, transparency, and a deep understanding of Canadian immigration law and policy.</p>
                     
                     <div class="credentials">
-                        <div class="credential-item">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M9 11l3 3L22 4"></path>
-                                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
-                            </svg>
-                            <span>RCIC License Number: [Your License #]</span>
-                        </div>
                         <div class="credential-item">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 11l3 3L22 4"></path>
@@ -99,7 +86,7 @@
                                 <path d="M9 11l3 3L22 4"></path>
                                 <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
                             </svg>
-                            <span>Fluent in: English, [Other Languages]</span>
+                            <span>Fluent in: English, Pashto, and Farsi</span>
                         </div>
                     </div>
                 </div>
@@ -457,7 +444,6 @@
                         <span class="logo-text">Unlock Immigration</span>
                         <span class="logo-subtitle">Khalil Humam</span>
                     </div>
-                    <p class="footer-text">RCIC License #: [Your License #]</p>
                 </div>
 
                 <div class="footer-col">
