--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#book" class="nav-link">Book</a></li>
                     <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="#process" class="nav-link">Process</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link nav-link-cta">Contact</a></li>
@@ -87,6 +88,45 @@
                             </svg>
                             <span>Fluent in: English, Pashto, and Farsi</span>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Book Section -->
+    <section class="book section" id="book">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Published Author</span>
+                <h2 class="section-title">My Book on Canadian Immigration</h2>
+                <p class="section-subtitle">Discover comprehensive insights into Canadian immigration processes and strategies</p>
+            </div>
+            <div class="book-grid">
+                <div class="book-content">
+                    <div class="book-info">
+                        <h3 class="book-title">Canadian Immigration: The Complete Guide</h3>
+                        <p class="book-description">Drawing from years of experience in the immigration industry since 2017, I've authored this comprehensive guide to help navigate Canada's complex immigration system. This book provides practical insights, step-by-step processes, and expert advice for various immigration pathways.</p>
+                        <ul class="book-features">
+                            <li>Express Entry and Provincial Nominee Programs</li>
+                            <li>Work and Study Permit Applications</li>
+                            <li>Family Sponsorship Guidelines</li>
+                            <li>Common Pitfalls and How to Avoid Them</li>
+                            <li>Recent Policy Changes and Updates</li>
+                        </ul>
+                        <div class="book-cta">
+                            <a href="https://a.co/d/5QuWJcZ" target="_blank" class="btn btn-primary">Get Your Copy on Amazon</a>
+                            <span class="book-price">Available in Paperback and Kindle</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="book-image">
+                    <div class="book-placeholder">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                        </svg>
+                        <p>Book Cover</p>
                     </div>
                 </div>
             </div>
