--- a/index.html
+++ b/index.html
@@ -378,55 +378,55 @@
                 <h2 class="section-title">Start Your Canadian Immigration Journey Today</h2>
                 <p class="section-subtitle">Contact us for a free initial consultation</p>
             </div>
-            <div class="contact-info-full">
-                <div class="contact-item">
-                    <div class="contact-icon">
+            <div class="contact-info-simple">
+                <div class="contact-row">
+                    <div class="contact-icon-simple">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                             <polyline points="22,6 12,13 2,6"></polyline>
                         </svg>
                     </div>
-                    <div class="contact-details">
-                        <h4>Email</h4>
-                        <a href="mailto:khalil.humam@unlockimmigration.ca">khalil.humam@unlockimmigration.ca</a>
+                    <div class="contact-text">
+                        <span class="contact-label">Email:</span>
+                        <a href="mailto:khalil.humam@unlockimmigration.ca" class="contact-value">khalil.humam@unlockimmigration.ca</a>
                     </div>
                 </div>
 
-                <div class="contact-item">
-                    <div class="contact-icon">
+                <div class="contact-row">
+                    <div class="contact-icon-simple">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                         </svg>
                     </div>
-                    <div class="contact-details">
-                        <h4>Phone</h4>
-                        <a href="tel:+12367779820">+1.236.777.9820</a>
+                    <div class="contact-text">
+                        <span class="contact-label">Phone:</span>
+                        <a href="tel:+12367779820" class="contact-value">+1.236.777.9820</a>
                     </div>
                 </div>
 
-                <div class="contact-item">
-                    <div class="contact-icon">
+                <div class="contact-row">
+                    <div class="contact-icon-simple">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                             <circle cx="12" cy="10" r="3"></circle>
                         </svg>
                     </div>
-                    <div class="contact-details">
-                        <h4>Office</h4>
-                        <p>Brentwood Mall<br>Burnaby, BC<br>Canada</p>
+                    <div class="contact-text">
+                        <span class="contact-label">Office:</span>
+                        <span class="contact-value">Brentwood Mall, Burnaby, BC, Canada</span>
                     </div>
                 </div>
 
-                <div class="contact-item">
-                    <div class="contact-icon">
+                <div class="contact-row">
+                    <div class="contact-icon-simple">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <circle cx="12" cy="12" r="10"></circle>
                             <polyline points="12 6 12 12 16 14"></polyline>
                         </svg>
                     </div>
-                    <div class="contact-details">
-                        <h4>Business Hours</h4>
-                        <p>Monday - Friday<br>9:00 AM - 5:00 PM PST</p>
+                    <div class="contact-text">
+                        <span class="contact-label">Business Hours:</span>
+                        <span class="contact-value">Monday - Friday, 9:00 AM - 5:00 PM PST</span>
                     </div>
                 </div>
             </div>
